--- a/header-footer.html
+++ b/header-footer.html
@@ -167,21 +167,56 @@
 						</div>
 						<div class="form-group">
 							<label for="date">Fecha del evento *</label>
-							<input type="text" class="fecha form-control" id="date" name="date" placeholder="dd/mm/aaaa">
+							<input type="text" class="date form-control" id="date" name="date" placeholder="dd/mm/aaaa">
+						</div>
+						<div style="display:none" class="date-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
 						</div>
 							<div class="form-group">
 							<label for="comentario">Eslogan</label>
-							<input type="text" class="form-control" id="comentario" name="comentario" placeholder="Introduzca un comentario relacionado con el evento">
+							<input type="text" class="form-control" id="comentario" name="comentario" placeholder="Introduzca un eslogan para su evento">
 						</div>
 						<div>
-							<label for="foto">Introduzca fotos para el evento (mínimo 1)</label>
-							<input type="file" name="img"> 
-							<input type="file" name="img">
-							<input type="file" name="img">
-							<input type="file" name="img">
-							<input type="file" name="img">
+							<label for="foto">Introduzca fotos para el evento (mínimo una)</label>
+							<input class="image1" type="file" name="img"> 
+							<input disabled class="image2" type="file" name="img">
+							<input disabled class="image3" type="file" name="img">
+							<input disabled class="image4" type="file" name="img">
+							<input disabled class="image5" type="file" name="img">
 						</div>
-						<br></br>					
+						<br></br>
+						<div style="display:none" class="img1-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>	
+						<div style="display:none" class="img2-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>	
+						<div style="display:none" class="img3-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>	
+						<div style="display:none" class="img4-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>	
+						<div style="display:none" class="img5-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>	
+						<div style="display:none" class="param-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>				
 						<div class="modal-footer">
 							<button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancelar</button>
 							<button type="submit" class="btn btn-success pull-right">Guardar</button>
